Closed Bug 1909202 Opened 1 year ago Closed 11 months ago

drivecentric.io - Unable to load the PDF, stuck loading

Categories

(Web Compatibility :: Site Reports, defect, P2)

Firefox 130
Desktop
Windows 10

Tracking

(firefox-esr115 unaffected, firefox-esr128 fixed, firefox128 wontfix, firefox129 wontfix, firefox130 fixed, firefox131 fixed)

RESOLVED FIXED
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- fixed
firefox128 --- wontfix
firefox129 --- wontfix
firefox130 --- fixed
firefox131 --- fixed

People

(Reporter: ctanase, Assigned: sefeng211)

References

()

Details

(Keywords: webcompat:needs-diagnosis, webcompat:site-report, Whiteboard: [webcompat-source:product])

User Story

platform:windows,mac,linux,android
impact:content-missing
configuration:general
affects:all
branch:release

Attachments

(2 files)

Attached image FF vs Chrome.png

Environment:
Operating system: Windows 10
Firefox version: Firefox 127.0 (release)/128/130

Preconditions:

  • Clean profile

Steps to reproduce:

  1. Navigate to: https://webdealdocs.drivecentric.io/_global/PDFDocument/ViewPDF.aspx?p=17989&d=22148ca9-de5d-4b8d-9862-cc7b8f054c20&s=e52bda44-e5d7-4b35-a813-b592696a270c&u=8509b93d-e74f-4787-bd1a-fa9e2ebcb33d
  2. Observe the page.

Expected Behavior:
The PDF is loaded correctly.

Actual Behavior:
The PDF is stuck loading.

Notes:

  • Reproducible on the latest Firefox Release and Nightly
  • Reproducible regardless of the ETP setting
  • Works as expected using Chrome

Created from webcompat-user-report:aa2e5d72-63d1-4452-b153-ed5e5790a623

Component: Site Reports → PDF Viewer
Product: Web Compatibility → Firefox

This might also be a networking error... moving this back to us for more investigation.

Severity: -- → S2
User Story: (updated)
Component: PDF Viewer → Site Reports
Priority: -- → P2
Product: Firefox → Web Compatibility

Yeah, I tried to open the 3 or 4 times: it didn't work, but finally now it works in either nightly or beta or release.
For me it isn't an issue with pdf.js.

Browser console shows the following warning.

The resource at “https://webdealdocs.drivecentric.io/favicon.ico” was blocked by OpaqueResponseBlocking. Reason: “after sniff: status code is not in allowed range”.
Blocks: 1851143

ORB blocks a favicon, I don't think that's the issue here. I see a NS_ERROR_NET_PARTIAL_TRANSFER error for main request.

No longer blocks: 1851143

I wondered if this was related to https://bugzilla.mozilla.org/show_bug.cgi?id=1865040 but it now seems to load for me. Is anyone able to still reproduce?

The PDF isn't loaded for me, still ... I was using the nightly build 130.0a1 (2024-07-24) on Win 11.

I can still reproduce the issue on Nightly130.0a1(20240725093133) Windows11.

Reproducible on Windows 10/Nightly 130.0a1 (2024-07-25) sa well.

:Calin, could you try to find a regressor thanks to mozregression (if it's a regression of course) ?
If I set network.http.http2.enabled to false, then it works correctly.
I set pdfjs.disabled to true, the pdf downloads but I get a popup showing an error and a PART file (empty) in my download folder.
I'd suspect a networking issue, :kershaw, could you have a look please ?

Flags: needinfo?(kershaw)
Flags: needinfo?(ctanase)

Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=42cc8e97e461cb5056172c6ae13c4c025fbbfb79&tochange=efbd04cb07486419679cf588ba6095f7ef9edef6

Suspect: c1b9b1a0b6f01317ffda9cabda86e8482d08ee57 Sean Feng — Bug 1800658 - Enable the partially implemented ORB in Nightly again r=smaug

It may be a silly thought, but, if the favicon request is ORB'd, did it disrupt the rest of the network for some reason?

(In reply to Sean Feng [:sefeng] from comment #4)

ORB blocks a favicon, I don't think that's the issue here. I see a NS_ERROR_NET_PARTIAL_TRANSFER error for main request.

This is exactly the reason why we see NS_ERROR_NET_PARTIAL_TRANSFER. The favicon request was canceled with the error NS_ERROR_FAILURE, which is treated as a hard error in necko. As a result, the entire H2 connection is closed.

Can we use another error code to cancel the channel? Maybe NS_BINDING_ABORTED?

Flags: needinfo?(kershaw)
Flags: needinfo?(ctanase) → needinfo?(sefeng)

It may be a silly thought, but, if the favicon request is ORB'd, did it disrupt the rest of the network for some reason?

Yes, it unfortunately disrupts the whole h2 connection. :(

Http2 uses a single connection for multiple requests. When ORB blocks a
request with NS_ERROR_FAILURE, it's treated as a hard error in necko,
then the entire connection is closed.

This patches converts ORB to uses NS_BINDING_ABORTED.

Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Flags: needinfo?(sefeng)
Pushed by sefeng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2cdab0fa0703 Use NS_BINDING_ABORTED for ORB blocked errors r=kershaw,necko-reviewers
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED

Please nominate this for Beta and ESR128 approval. It grafts cleanly to both.

Comment on attachment 9417950 [details]
Bug 1909202 - Use NS_BINDING_ABORTED for ORB blocked errors

Beta/Release Uplift Approval Request

  • User impact if declined: Some network requests may be incorrectly closed, leads to potential loading issues.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch is trivial.
  • String changes made/needed:
  • Is Android affected?: No

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: When ORB blocks a request, it’ll close the entire H2 connection which is not expected. That means any other requests using the same connection will also be closed.
  • User impact if declined: Some requests are closed unexpectedly, leads to potential loading issues.
  • Fix Landed on Version: 131
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch is trivial.
Flags: needinfo?(sefeng)
Attachment #9417950 - Flags: approval-mozilla-esr128?
Attachment #9417950 - Flags: approval-mozilla-beta?

Comment on attachment 9417950 [details]
Bug 1909202 - Use NS_BINDING_ABORTED for ORB blocked errors

Approved for 130.0b8.

Attachment #9417950 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9417950 [details]
Bug 1909202 - Use NS_BINDING_ABORTED for ORB blocked errors

Approved for 128.2esr.

Attachment #9417950 - Flags: approval-mozilla-esr128? → approval-mozilla-esr128+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: