Bug 1909202 - Use NS_BINDING_ABORTED for ORB blocked errors r=kershaw,necko-reviewers a=RyanVM

Http2 uses a single connection for multiple requests. When ORB blocks a
request with NS_ERROR_FAILURE, it's treated as a hard error in necko,
then the entire connection is closed.

This patches converts ORB to uses NS_BINDING_ABORTED.

Differential Revision: https://phabricator.services.mozilla.com/D218643